fix: student controller
