# server/server/src/interfaces/student.ts
@@ -1,4 +1,5 @@
 import {ID} from './entity';
+import {IGroup} from './group';
 import {Person} from './person';
 
 export interface IStudent extends Person {
@@ -6,10 +7,6 @@ export interface IStudent extends Person {
   group: ID;
 }
 
-export abstract class Students {
-  abstract registerStudent(student: IStudent): Promise<ID>;
-  abstract deleteStudent(id: string): Promise<boolean>;
-  abstract getStudents(): Promise<IStudent[]>;
-  abstract getStudent(id: string): Promise<IStudent>;
-  abstract updateStudent(id: string, data: IStudent): Promise<IStudent>;
+export interface IStudentExtended extends Omit<IStudent, 'group'> {
+  group: IGroup;
 }
